public/css/hyde.css
/*
 *  __                  __
 * /\ \                /\ \
 * \ \ \___   __  __   \_\ \     __
 *  \ \  _ `\/\ \/\ \  /'_` \  /'__`\
 *   \ \ \ \ \ \ \_\ \/\ \_\ \/\  __/
 *    \ \_\ \_\/`____ \ \___,_\ \____\
 *     \/_/\/_/`/___/> \/__,_ /\/____/
 *                /\___/
 *                \/__/
 *
 * Designed, built, and released under MIT license by @mdo. Learn more at
 * https://github.com/poole/hyde.
 */

/*
 * Contents
 *
 * Global resets
 * Sidebar
 * Container
 * Reverse layout
 * Themes
 */

@font-face {
  font-family: 'BebasNeue Bold';
  src:url('../BebasNeue Bold.ttf') format('truetype');
}

/*
 * Global resets
 *
 * Update the foundational and global aspects of the page.
 */

html {
  font-family: "PT Sans", Helvetica, Arial, sans-serif;
}
@media (min-width: 48rem) {
  html {
    font-size: 16px;
  }
}
@media (min-width: 58rem) {
  html {
    font-size: 20px;
  }
}

/*
 * Sidebar
 *
 * Flexible banner for housing site name, intro, and "footer" content. Starts
 * out above content in mobile and later moves to the side with wider viewports.
 */

.sidebar {
  text-align: center;
  padding: 2rem 1rem;
  color: rgba(243,239,240,.5);
  background-color: #282520;
}
@media (min-width: 48rem) {
  .sidebar {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 18rem;
    text-align: left;
  }
}
.sidebar img {
  width: 170px;
  margin: 0 auto;
  margin-bottom: 30px;
  border-radius: 170px;
}
@media (max-height: 32rem) and (min-width: 48rem) {
  .sidebar img {
    display: none;
  }
}

/* Sidebar links */
.sidebar a {
  color: #0383A7;
}

/* About section */
.sidebar-about h1 {
  color: #0383A7;
  margin-top: 0;
  margin-bottom: 5px;
  font-family: 'BebasNeue Bold', Helvetica, Arial, sans-serif;
  font-size: 3.15rem;
}
.sidebar-about p {
  margin-bottom: 10px;
}

/* Sidebar nav */
.sidebar-nav {
  padding-left: 0;
  list-style: none;
  margin-bottom: 5px;
}
.sidebar-nav-item {
  display: block;
}
a.sidebar-nav-item:hover,
a.sidebar-nav-item:focus {
  text-decoration: underline;
}
.sidebar-nav-item.active {
  font-weight: bold;
}

.typcn {
  font-family: 'typicons';
  margin: 0 20px;
  font-size: 140%;
  color: #F3EFF0;
}
@media (max-width: 48rem) {
  .typcn {
    margin: 0 11px;
  }
}
.typcn:hover {
  color: #1DC4F3;
}
.typcn-rss {
  float: right;
  display: block;
  margin-right: 7px;
  margin-left: 0px;
  font-size: 130%;
  color: #282520;
}


/* Sticky sidebar
 *
 * Add the `sidebar-sticky` class to the sidebar's container to affix it the
 * contents to the bottom of the sidebar in tablets and up.
 */

@media (min-width: 48rem) {
  .sidebar-sticky {
    position: absolute;
    right:  .7rem;
    bottom: .7rem;
    left:   .7rem;
  }
}

/* Container
 *
 * Align the contents of the site above the proper threshold with some margin-fu
 * with a 25%-wide `.sidebar`.
 */

.content {
  padding-top:    4rem;
  padding-bottom: 4rem;
}
@media (min-width: 48rem) {
  .content {
    max-width: 38rem;
    margin-left: 20rem;
    margin-right: 2rem;
  }
}
@media (min-width: 64rem) {
  .content {
    margin-left: 22rem;
    margin-right: 4rem;
  }
}


/*
 * Reverse layout
 *
 * Flip the orientation of the page by placing the `.sidebar` on the right.
 */

@media (min-width: 48rem) {
  .layout-reverse .sidebar {
    left: auto;
    right: 0;
  }
  .layout-reverse .content {
    margin-left: 2rem;
    margin-right: 20rem;
  }
}
@media (min-width: 64rem) {
  .layout-reverse .content {
    margin-left: 4rem;
    margin-right: 22rem;
  }
}

/*
 * Themes
 *
 * As of v1.1, Hyde includes optional themes to color the sidebar and links
 * within blog posts. To use, add the class of your choosing to the `body`.
 */

/* Base16 (http://chriskempson.github.io/base16/#default) */

/* Red */
.theme-base-08 .sidebar {
  background-color: #ac4142;
}
.theme-base-08 .content a,
.theme-base-08 .related-posts li a:hover {
  color: #ac4142;
}

/* Orange */
.theme-base-09 .sidebar {
  background-color: #d28445;
}
.theme-base-09 .content a,
.theme-base-09 .related-posts li a:hover {
  color: #d28445;
}

/* Yellow */
.theme-base-0a .sidebar {
  background-color: #f4bf75;
}
.theme-base-0a .content a,
.theme-base-0a .related-posts li a:hover {
  color: #f4bf75;
}

/* Green */
.theme-base-0b .sidebar {
  background-color: #90a959;
}
.theme-base-0b .content a,
.theme-base-0b .related-posts li a:hover {
  color: #90a959;
}

/* Cyan */
.theme-base-0c .sidebar {
  background-color: #75b5aa;
}
.theme-base-0c .content a,
.theme-base-0c .related-posts li a:hover {
  color: #75b5aa;
}

/* Blue */
.theme-base-0d .sidebar {
  background-color: #6a9fb5;
}
.theme-base-0d .content a,
.theme-base-0d .related-posts li a:hover {
  color: #6a9fb5;
}

/* Magenta */
.theme-base-0e .sidebar {
  background-color: #aa759f;
}
.theme-base-0e .content a,
.theme-base-0e .related-posts li a:hover {
  color: #aa759f;
}

/* Brown */
.theme-base-0f .sidebar {
  background-color: #8f5536;
}
.theme-base-0f .content a,
.theme-base-0f .related-posts li a:hover {
  color: #8f5536;
}

/* My Theme */
.theme-hayley h1 {
  line-height: 100%;
}
.theme-hayley .sidebar {
  background-color: #282520;
}
.theme-hayley .content a,
.theme-hayley .related-posts li a:hover {
  color: #B41547;
}

